--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,3 +1,6 @@
-Django==3.0.7
-gunicorn==20.0.4
+asgiref==3.2.10
+Django==3.0.8
 psycopg2-binary==2.8.5
+pytz==2020.1
+sqlparse==0.3.1
+uWSGI==2.0.19.1
