--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,7 +6,7 @@ services:
       context: ./app
       dockerfile: Dockerfile.prod
     # command: gunicorn hello_django.wsgi:application --bind 0.0.0.0:8000
-    command: uwsgi --ini uwsgi.ini
+    command: uwsgi --http :8000 --module hello_django.wsig:application
     volumes:
       - static_volume:/home/app/web/staticfiles
       - media_volume:/home/app/web/mediafiles
